# ds-protocol-sftp-py-lib

./: CONTRIBUTING.md  Makefile  PyPI.md  README.md  pyproject.toml
.config/: pytest.ini  ruff.toml
.github/workflows/: release.yaml
docs/source/: conf.py  index.rst
examples/: 01_linked_service_connect.py  02_dataset_read.py  03_dataset_create.py  04_dataset_purge.py  05_dataset_list.py  06_dataset_upsert.py
src/ds_protocol_sftp_py_lib/: __init__.py  enums.py  errors.py  resource.yaml
src/ds_protocol_sftp_py_lib/dataset/: __init__.py  sftp.py
src/ds_protocol_sftp_py_lib/linked_service/: __init__.py  sftp.py
src/ds_protocol_sftp_py_lib/utils/sftp/: __init__.py  config.py  provider.py
tests/: __init__.py  test_version.py
tests/dataset/: __init__.py  test_sftp.py
tests/linked_service/: __init__.py  test_sftp.py
tests/utils/: __init__.py
tests/utils/sftp/: __init__.py  test_config.py  test_provider.py
