[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-protocol-sftp-py-lib"
version = "0.1.0"
description = "A Python package from the DS library collection"
dependencies = []
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE-APACHE"]
keywords = ["ds", "python"]
authors = [
    {name = "Christine Haugen", email = "hello@grasplabs.com"}
]
maintainers = [
    {name = "Christine Haugen", email = "hello@grasplabs.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "PyPI.md"

[project.urls]
Documentation = "https://grasp-labs.github.io/ds-protocol-sftp-py-lib/"
Repository = "https://github.com/grasp-labs/ds-protocol-sftp-py-lib/"
Issues = "https://github.com/grasp-labs/ds-protocol-sftp-py-lib/issues/"
Changelog = "https://github.com/grasp-labs/ds-protocol-sftp-py-lib/releases"

[project.optional-dependencies]
dev = [
    "bandit>=1.7.0",
    "ruff>=0.1.8",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pre-commit>=3.6.0",
    "build>=1.0.0",
    "twine>=4.0.0",
    "sphinx>=7.1.0",
    "sphinx-autoapi>=3.0.0",
    "sphinx-material>=0.0.35",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-autoapi>=3.0.0",
    "sphinx-material>=0.0.35",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
ds_protocol_sftp_py_lib = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
